# datagen-thor

./: README.md  pyproject.toml
bash/: monitor_generation.sh  run_generation_batch.sh  start_generation.sh  stop_generation.sh
bash/config/: generate.conf
prompts/: system.txt  system_endOfsentence.txt  user_template.txt  user_template_endOfsentence.txt
schemas/: example_schema.json  example_schema_endOfsentence.json
scripts/: install_ollama.sh  pull_models.sh  run_sample.sh  start_vllm_qwen3_14b.sh
src/datagen/: clients.py  dedupe.py  generate.py  io.py  parse.py  validate.py
